# tryOpus

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
docs/: DRED_PLC_深度分析.md  FEC_approaches_survey.md  LBRR_技术分析.md  LBRR_深度分析.md  LBRR_生成率低原因分析与改进方案.md  Opus_DRED_源码实现分析.md  Opus_FEC_新方案探索报告.md  RTC_动态冗余调控方案.md  端到端落地方案.md
offline_validation/: README.md  run_experiments.sh  run_udp_test.sh
offline_validation/src/: common.h  netsim.h  opus_sim.c  sender.c  wav_io.h
representative_audio/: README.md  manifest.txt
representative_audio/dialogue/: dialogue_reference.txt
results/: rtc_latest  rtc_report.md
results/representative_audio_cache/clip_10s/: manifest.txt
results/representative_audio_cache/clip_4s/: manifest.txt
scripts/: cursor_cloud_startup.sh  run_experiments.sh  run_udp_test.sh
src/: opus_sim.c  receiver.c  sender.c
tools/: analyze.py  analyze_lbrr_rate.c  gen_audio.py  gen_rtc_report.py  prepare_representative_audio.py  run_tess_emotion2vec.py  run_tess_offline_emotion_eval.py
webrtc_demo/: README.md  go.mod  go.sum  index_html.go  main.go  server_test.go
webrtc_demo/internal/adaptation/: adaptation.go  adaptation_test.go
webrtc_demo/internal/opusx/: blob.go  opus.go
webrtc_demo/internal/rtc/: lossinject.go  peer.go
webrtc_demo/internal/signal/: client.go  protocol.go
webrtc_demo/internal/wav/: wav.go
webrtc_demo/receiver/: main.go
webrtc_demo/scripts/: gen_tone.py  prepare_representative_audio.py  run_rtc_experiments.sh  run_test.sh
webrtc_demo/sender/: main.go
webrtc_demo/signaling/: main.go
